--- a/src/pages/blog/[blogId].astro
+++ b/src/pages/blog/[blogId].astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/BlogPost.astro";
-import { getBlogs, getBlogDetail } from "../../library/microcms";
+// import { getBlogs, getBlogDetail } from "../../library/microcms";
+import { getBlogs, getBlogDetail } from "../microcms";
 
 // 生成する記事のIDを全て取得
 export async function getStaticPaths() {
