--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,8 +5,8 @@ import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 
 //microCMS呼び出し
-// import { getBlogs } from "../library/microcms";
-import { getBlogs } from "./microcms";
+import { getBlogs } from "../library/microcms";
+// import { getBlogs } from "./microcms";
 const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt"] });
 
 // // Use Astro.glob() to fetch all posts, and then sort them by date.
