--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -6,8 +6,17 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 
 //microCMS呼び出し
 import { getBlogs } from "../library/microcms";
-// import { getBlogs } from "./microcms";
-const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
+// // import { getBlogs } from "./microcms";
+// const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
+
+export async function getStaticPaths({ paginate }:any) {
+  // import { getBlogs } from "./microcms";
+  const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
+  // 記事の配列から、1ページに10個づつ入るようにページを生成する
+  return paginate(posts, { pageSize: 10 });
+}
+// ページ分割されたデータは、すべて "page" プロパティとして渡される
+const { page } = Astro.props;
 
 // // Use Astro.glob() to fetch all posts, and then sort them by date.
 // const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
@@ -68,22 +77,25 @@ const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedA
 			<section>
 				<div>
 					{
-						posts.map((post) => (
+						page.data.map((post:any) => (
+						// posts.map((post) => (
 							<div>
-								{post.eyecatch && <a href={`/${post.id}`}><img width={720} height={360} src={post.eyecatch.url} alt="" /></a>}
+								{post.eyecatch && <a href={`/posts/${post.id}`}><img width={720} height={360} src={post.eyecatch.url} alt="" /></a>}
 								<span class="published_time_span">
 									<time datetime={post.publishedAt}>
 										{new Date(post.publishedAt).toLocaleString('ja-JP')}
 									</time>
 								</span>
 								{post.category && <span class="category"><a href="#">{post.category.name}</a></span>}							
-								<a href={`/${post.id}`}>
+								<a href={`/posts/${post.id}`}>
 									<h2>{post.title}</h2>
 								</a>
 							</div>
 						))
 					}
 				</div>
+				{page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>}
+				{page.url.next ? <a href={page.url.next}>Next</a> : null}
 			</section>
 		</main>
 		<!-- <main>
