--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -1,21 +1,33 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import BaseHead from '../../../components/BaseHead.astro';
+import Header from '../../../components/Header.astro';
+import Footer from '../../../components/Footer.astro';
+import { SITE_TITLE, SITE_DESCRIPTION } from '../../../config';
 
 //microCMS呼び出し
-import { getBlogs } from "../library/microcms";
+import { getBlogs, getCategories } from "../../../library/microcms";
 // // import { getBlogs } from "./microcms";
 // const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
 
-export async function getStaticPaths({ paginate }:any) {
+export async function getStaticPaths({paginate}) {
+  const { contents: categories } = await getCategories({ fields: ["id"] });
+  const allTags = categories.map((category) => category.id);
+  //console.log(allTags);
   const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
-  // 記事の配列から、1ページに10個づつ入るようにページを生成する
-  return paginate(posts, { pageSize: 10 });
+  // console.log(posts);
+  // すべてのタグに対して、paginate() の結果を返す。
+  // 必ず、`{params: {tag}} を `paginate()` に渡してください。
+  // そうすれば、Astroは結果がどのタググループに対するものか分かります。
+  return allTags.map((categoryId) => {
+    const filteredPosts = posts.filter((post) => post.category !== null && post.category.id === categoryId);
+    return paginate(filteredPosts, {
+      params: { categoryId },
+      pageSize: 10
+    });
+  });
 }
-// ページ分割されたデータは、すべて "page" プロパティとして渡される
 const { page } = Astro.props;
+const params = Astro.params;
 
 // // Use Astro.glob() to fetch all posts, and then sort them by date.
 // const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
@@ -93,7 +105,7 @@ const { page } = Astro.props;
 						))
 					}
 				</div>
-				{page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>}
+				{page.url.prev ? <a href={page.url.prev}>Previous</a> : null}
 				{page.url.next ? <a href={page.url.next}>Next</a> : null}
 			</section>
 		</main>
