--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -10,17 +10,12 @@ import { getBlogs } from "../library/microcms";
 // const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
 
 export async function getStaticPaths({ paginate }:any) {
-  const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
+  const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","description","eyecatch","category"] });
   // 記事の配列から、1ページに10個づつ入るようにページを生成する
   return paginate(posts, { pageSize: 10 });
 }
 // ページ分割されたデータは、すべて "page" プロパティとして渡される
 const { page } = Astro.props;
-
-// // Use Astro.glob() to fetch all posts, and then sort them by date.
-// const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
-// 	(a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf()
-// );
 ---
 
 <!DOCTYPE html>
@@ -88,6 +83,7 @@ const { page } = Astro.props;
 								{post.category && <span class="category"><a href={`/category/${post.category.id}`}>{post.category.name}</a></span>}							
 								<a href={`/posts/${post.id}`}>
 									<h2>{post.title}</h2>
+									<p>{post.description}</p>
 								</a>
 							</div>
 						))
@@ -97,26 +93,6 @@ const { page } = Astro.props;
 				{page.url.next ? <a href={page.url.next}>Next</a> : null}
 			</section>
 		</main>
-		<!-- <main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<time datetime={post.frontmatter.pubDate}>
-									{new Date(post.frontmatter.pubDate).toLocaleDateString('en-us', {
-										year: 'numeric',
-										month: 'short',
-										day: 'numeric',
-									})}
-								</time>
-								<a href={post.url}>{post.frontmatter.title}</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main> -->
 		<Footer />
 	</body>
 </html>
