--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -20,7 +20,7 @@ const blog = await getBlogDetail(blogId as string);
 
 <Layout content={{
     title: blog.title,
-    description: '',
+    description: blog.description? blog.description : '',
     heroImage: blog.eyecatch?.url ?? '',
     pubDate: new Date(blog.publishedAt).toLocaleString('ja-JP'),
     updatedDate: new Date(blog.updatedAt).toLocaleString('ja-JP'),
