--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,7 +74,7 @@ a div.description {
 }
 
 .hamburger {
-  position: fixed;
+  /*position: fixed;*/
   top: 10px;
   right: 10px;
   padding-right: 20px;
@@ -90,7 +90,11 @@ a div.description {
   margin-bottom: 10px;
   background-color: #444;
 }
-
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
 .nav-links {
   width: 100%;
   height: 100%;
