--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,11 +12,6 @@ const { contents: categories } = await getCategories({ fields: ["id","name"],ord
 		<h2 class="site_title">
 			{SITE_TITLE}
 		</h2>
-		<div class="hamburger">
-			<span class="line"></span>
-			<span class="line"></span>
-			<span class="line"></span>
-		</div>
 		<nav>
 			<div class="nav-links">
 				<span class="close"></span>
@@ -38,18 +33,25 @@ const { contents: categories } = await getCategories({ fields: ["id","name"],ord
 				</details>
 			</div>
 		</nav>
+		<div class="hamburger">
+			<span class="line"></span>
+			<span class="line"></span>
+			<span class="line"></span>
+		</div>
 	</div>
 </header>
 <style>
 	header {
+		width: 100%;
 		/* margin: 0em 0 2em; */
 		position: fixed;
+		top: 0;
 		background-color: #fff;
 	}
 	h2 {
 		margin: 0.5em 0;
 	}
 	.site_title {
-		display: inline;
+		/*display: inline;*/
 	}
 </style>
