--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,7 +74,7 @@ a div.description {
 }
 
 .hamburger {
-  /*position: fixed;*/
+  position: absolute;
   top: 10px;
   right: 10px;
   padding-right: 20px;
@@ -176,22 +176,22 @@ a div.description {
 
 
 @media screen and (min-width: 636px) {
-  .nav-links {
+  /*.nav-links {
     margin-left: 5em;
     display: block;
     position: static;
     width: auto;
     background: none;
-  }
+  }*/
 
-  .nav-links a {
+  /*.nav-links a {
     display: inline-block;
     padding: 15px 20px;
-  }
+  }*/
 
-  .hamburger {
+  /*.hamburger {
     display: none;
-  }
+  }*/
 
   .close {
     display: none;
