--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,6 +44,7 @@ const { contents: categories } = await getCategories({ fields: ["id","name"],ord
 	header {
 		width: 100%;
 		/* margin: 0em 0 2em; */
+		max-width: 65ch;
 		position: fixed;
 		top: 0;
 		background-color: #fff;
