--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -193,9 +193,9 @@ a div.description {
     padding-right: 0;
   }
 
-  .close {
+  /*.close {
     display: none;
-  }
+  }*/
   
   .categories_button {
     padding: 15px 20px;
