--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,43 +9,43 @@ const { contents: categories } = await getCategories({ fields: ["id","name"],ord
 
 <header>
 	<div class="navbar">
-		<h2 class="site_title">
-			{SITE_TITLE}
-		</h2>
+		<a href="/" class="">
+			<h2 class="site_title">
+				{SITE_TITLE}
+			</h2>
+		</a>
 		<div class="hamburger">
 			<span class="line"></span>
 			<span class="line"></span>
 			<span class="line"></span>
 		</div>
-		<nav>
-			<div class="nav-links">
-				<span class="close"></span>
-				<HeaderLink href="/">Home</HeaderLink>
-				<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-				<details class="categories_link">
-					<summary class="categories_button">
-						Categories
-					</summary>
-						<ul>
-							{
-								categories.map((category:any) => (
-									<li>
-										<HeaderLink href={`/category/${category.id}`}>{category.name}</HeaderLink>
-									</li>	
-								))
-							}
-						</ul>
-				</details>
-			</div>
-		</nav>
 	</div>
+	<nav>
+		<div class="nav-links">
+			<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
+			<details class="categories_link">
+				<summary class="categories_button">
+					Categories
+				</summary>
+					<ul>
+						{
+							categories.map((category:any) => (
+								<li>
+									<HeaderLink href={`/category/${category.id}`}>{category.name}</HeaderLink>
+								</li>	
+							))
+						}
+					</ul>
+			</details>
+		</div>
+	</nav>	
 </header>
 <style>
 	header {
 		width: 100%;
 		/* margin: 0em 0 2em; */
 		max-width: 65ch;
-		position: fixed;
+		position: relative;
 		top: 0;
 		background-color: #fff;
 	}
