--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -2,6 +2,7 @@
 import BaseHead from '../../../components/BaseHead.astro';
 import Header from '../../../components/Header.astro';
 import Footer from '../../../components/Footer.astro';
+import Sidebar from '../../../components/Sidebar.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../../config';
 
 //microCMS呼び出し
@@ -63,15 +64,6 @@ const category = await getCategoryDetail(params.categoryId as string);
 				color: #8e32dc;
 			}
 
-			.published_time_span {
-				font-size: 12px;
-			}
-
-			.category {
-				font-size: 13px;
-				margin:auto 0.5em;
-			}
-
 			div a div h2 {
 				margin-top: 0;
 			}
@@ -79,14 +71,15 @@ const category = await getCategoryDetail(params.categoryId as string);
 	</head>
 	<body>
 		<Header />
-		<main>			
+		<main>
+			<Sidebar></Sidebar>
 			<section>
 				<h1>{category.name}</h1>
 				<div>
 					{
 						page.data.map((post:any) => (
 						// posts.map((post) => (
-							<div>
+							<div class="post">
 								{post.eyecatch && <a href={`/posts/${post.id}`}><img width={720} height={360} src={post.eyecatch.url} alt="" /></a>}
 								<span class="published_time_span">
 									<time datetime={post.publishedAt}>
