--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -47,8 +47,9 @@ const node_version_2=import.meta.env.NODE_VERSION;
 	<body>
 		<Header />
 		<main>
-			{serviceDomain}
-			{node_version}
+			<p>sd:{serviceDomain}</p>
+			<p>nv1:{node_version}</p>
+			<p>nv2:{node_version_2}</p>
 		</main>
 		<!-- <main>
 			<section>
