--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -73,7 +73,7 @@ const category = await getCategoryDetail(params.categoryId as string);
 		<Header />
 		<main>
 			<Sidebar></Sidebar>
-			<section>
+			<section class="contents">
 				<h1>{category.name}</h1>
 				<div>
 					{
