--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -48,7 +48,7 @@ const { page } = Astro.props;
 		<Header />
 		<main>
 			<Sidebar></Sidebar>
-			<section>
+			<section class="contents">
 				<div>
 					{
 						page.data.map((post:any) => (
