--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,6 +113,16 @@ a div.description {
   text-transform: uppercase;
 }
 
+.nav-links .searchform {
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 .nav-links a:hover, a:focus {
   background-color: #8f8f8f;
 }
