--- a/src/pages/search/index.astro
+++ b/src/pages/search/index.astro
@@ -7,17 +7,16 @@ import Sidebar from '../../components/Sidebar.astro';
 import SearchResult from '../../components/SearchResult.vue';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../config';
 
-//microCMS呼び出し
-import { getBlogs } from "../../library/microcms";
-// const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
+// //microCMS呼び出し
+// import { getBlogs } from "../../library/microcms";
 
-export async function getStaticPaths({ paginate }:any) {
-  const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","content","eyecatch","category"] });
-  // 記事の配列から、1ページに10個づつ入るようにページを生成する
-  return paginate(posts, { pageSize: 10 });
-}
-// ページ分割されたデータは、すべて "page" プロパティとして渡される
-const { page } = Astro.props;
+// export async function getStaticPaths({ paginate }:any) {
+//   const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","content","eyecatch","category"] });
+//   // 記事の配列から、1ページに10個づつ入るようにページを生成する
+//   return paginate(posts, { pageSize: 10 });
+// }
+// // ページ分割されたデータは、すべて "page" プロパティとして渡される
+// const { page } = Astro.props;
 ---
 
 <!DOCTYPE html>
