--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,6 +10,7 @@ export interface Props {
 }
 
 const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
+const card_img = import.meta.env.CARD_IMAGE;
 ---
 
 <!-- Global Metadata -->
@@ -28,11 +29,13 @@ const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
+<!-- <meta property="og:image" content={new URL(image, Astro.url)} /> -->
+<meta property="og:image" content={card_img} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+<!-- <meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
+<meta property="twitter:image" content={card_img} />
