--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,6 +12,15 @@ export interface Props {
 const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
 const card_img = import.meta.env.CARD_IMAGE;
 ---
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0M4H6RV722"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0M4H6RV722');
+</script>
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
