edit css and BlogPost etc.

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -36,7 +36,7 @@ const {
 
 	<body>
 		<Header />
-		<main>
+		<main class="main">
 			<Sidebar></Sidebar>
 			<article class="contents">
 				{heroImage && <img width={720} height={360} src={heroImage} alt="" />}
