--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -46,7 +46,7 @@ const { page } = Astro.props;
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="main">
 			<Sidebar></Sidebar>
 			<section class="contents">
 				<div>
