--- a/src/pages/category/[categoryId]/[...page].astro
+++ b/src/pages/category/[categoryId]/[...page].astro
@@ -71,7 +71,7 @@ const category = await getCategoryDetail(params.categoryId as string);
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="main">
 			<Sidebar></Sidebar>
 			<section class="contents">
 				<h1>{category.name}</h1>
