--- a/src/pages/search/index.astro
+++ b/src/pages/search/index.astro
@@ -47,7 +47,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../config';
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class="main">
 			<Sidebar></Sidebar>
 			<section class="contents">
 				<SearchResult client:only="vue"/>
