--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -26,4 +26,8 @@ const blog = await getBlogDetail(blogId as string);
     updatedDate: new Date(blog.updatedAt).toLocaleString('ja-JP'),
 }}>
   <main set:html={blog.content} />
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">
+    Tweet
+  </a>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </Layout>
