--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -22,8 +22,8 @@ const blog = await getBlogDetail(blogId as string);
     title: blog.title,
     description: blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').length > 100 ? blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,'').slice(0,101) + '...' : blog.content.replace(/<("[^"]*"|'[^']*'|[^'">])*>/g,''),
     heroImage: blog.eyecatch?.url ?? '',
-    pubDate: new Date(blog.publishedAt).toLocaleString('ja-JP'),
-    updatedDate: new Date(blog.updatedAt).toLocaleString('ja-JP'),
+    pubDate: new Date(blog.publishedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' }),
+    updatedDate: new Date(blog.updatedAt).toLocaleString('ja-JP',{ timeZone: 'Asia/Tokyo' }),
 }}>
   <main set:html={blog.content} />
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">
