add category span in BlogPost

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,11 +11,13 @@ export interface Props {
 		pubDate?: string;
 		updatedDate?: string;
 		heroImage?: string;
+		categoryId: string;
+		categoryName: string;
 	};
 }
 
 const {
-	content: { title, description, pubDate, updatedDate, heroImage },
+	content: { title, description, pubDate, updatedDate, heroImage, categoryId, categoryName },
 } = Astro.props;
 ---
 
@@ -49,6 +51,7 @@ const {
 						</div>
 					)
 				}
+				{ categoryId && categoryName && <span class="category"><a href={`/category/${categoryId}`}>{categoryName}</a></span> }
 				<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">
 					Tweet
 				</a>
