--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,9 +21,9 @@ const {
 } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="ja">
 	<head>
-		<BaseHead title={title} description={description} />
+		<BaseHead title={title} description={description} image={heroImage} />
 		<style>
 			.title {
 				font-size: 2em;
