--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -11,6 +11,9 @@ export interface Props {
 
 const { title, description, image = import.meta.env.CARD_IMAGE } = Astro.props;
 ---
+<!-- The next line enables the indexing by robots on the page level -->
+<meta name="robots" content="index, follow" />
+
 <!-- Google tag (gtag.js) -->
 <script
  type="text/partytown"
