add label for searchform

--- a/src/components/SearchForm.astro
+++ b/src/components/SearchForm.astro
@@ -1,5 +1,6 @@
 <div class="searchform">
     <form action="/search" method="get">
+        <label for="q">サイト内検索</label>
         <input type="text" name="q" class="searchform-text">
         <input type="submit" value="検索" class="searchform-submit">
     </form>
